fix: write svg z-index

--- a/styles/Write.module.css
+++ b/styles/Write.module.css
@@ -39,7 +39,6 @@
 
 .optionbox img {
     position: absolute;
-    z-index: -1;
 }
 
 .img1 {
